# cauchy-solver

./: Cargo.toml  iterate.txt  main.py  newton.txt
src/: derive.rs  main.rs
